# knot

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  knotc
include/: ast.hpp  constants.hpp  evaluate.hpp  lexer.hpp  parser.hpp  plot.hpp  utils.hpp
src/: evaluate.cpp  lexer.cpp  main.cpp  parser.cpp  plot.cpp  utils.cpp
test/: beauty.knot  main.knot  second.knot
